@@ -1,3 +1,8 @@
+2007-09-12  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.base/solib-weak.exp (do_test): Adjust the file names for each
+	test.
+
 2007-09-10  Mark Kettenis  <kettenis@gnu.org>
 
 	* lib/gdb.exp (build_id_debug_filename_get): Improve check for
